WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170480
Fix leaks in WebUITextIndicatorData
https://bugs.webkit.org/show_bug.cgi?id=170480
Summary
Fix leaks in WebUITextIndicatorData
Megan Gardner
Reported
2017-04-04 15:36:02 PDT
Fix leaks in WebUITextIndicatorData
Attachments
Patch
(3.67 KB, patch)
2017-04-04 15:38 PDT
,
Megan Gardner
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2017-04-04 15:38:40 PDT
Created
attachment 306220
[details]
Patch
Wenson Hsieh
Comment 2
2017-04-04 15:41:54 PDT
Comment on
attachment 306220
[details]
Patch r=me
Megan Gardner
Comment 3
2017-04-04 15:58:21 PDT
https://trac.webkit.org/r214910
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug