Fix leaks in WebUITextIndicatorData https://bugs.webkit.org/show_bug.cgi?id=170480

Reviewed by Wenson Hsieh.

Removes extraneous retains.

* WebView/WebView.mm:
(-[WebUITextIndicatorData initWithImage:textIndicatorData:scale:]):



Canonical link: https://commits.webkit.org/187394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214910 268f45cc-cd09-0410-ab3c-d52691b4dbfc